--- a/projects/style.css
+++ b/projects/style.css
@@ -17,6 +17,7 @@ a {
     text-decoration: none;
     color: white;
     text-align: center;
+    transition: 125ms;
 }
 a:hover {
     color: GRAY;
@@ -84,6 +85,42 @@ button:hover {
     width: 280px;
     border: solid rgb(0, 255, 221);
     cursor: crosshair;
+}
+button:disabled, button[disabled] {
+    border-color: #424242;
+    background-color: #3c3c3c;
+    width: 200px;
+    cursor: not-allowed;
+    color: #666666;
+ }
+input, select {
+    background: none;
+    border: solid #333333;
+    border-radius: 24px;
+    width: 250px;
+    color: white;
+    margin: 20px auto;
+    height: 60px;
+    padding: 14px 10px;
+    outline: none;
+    transition: 0.2s;
+    font-size: 1.3rem;
+}
+select:hover {
+    background-color: #363636;
+}
+option {
+    color: #000000;
+}
+input:hover {
+    width: 320px;
+    background-color: #FFFFF0;
+    color: #000000;
+    border: solid royalblue;
+}
+input:focus {
+    width: 320px;
+    border: solid aqua;
 }
 .stats {
     width: 300px;
