--- a/projects/style.css
+++ b/projects/style.css
@@ -33,6 +33,16 @@ a:active {
     border: 10px solid #262626;
     border-radius: 20px;
 }
+.sub {
+    width: 60%;
+    background-color: #424242;
+    float: none;
+    margin: 10px auto;
+    padding: 10px;
+    border: 3px solid #515151;
+    border-radius: 20px;
+    box-sizing: content-box;
+}
 td {
     font-size: 0.95rem;
 }
