--- a/style.css
+++ b/style.css
@@ -68,6 +68,25 @@ button:hover {
     border: solid rgb(0, 255, 221);
     cursor: crosshair;
 }
+button:disabled {
+    background-color: #424242;
+}
+button:disabled:hover {
+    border-color: grey;
+    width: 200px;
+}
+textarea {
+    background: none;
+    padding: 5px;
+    border: 4px solid #424242;
+    border-radius: 10px;
+    font-size: 1.3rem;
+    margin: 15px;
+    min-height: 200px;
+    max-height: 700px;
+    max-width: 60%;
+    min-width: 60%;
+}
 
 /* Custom Classes */
 .nav {
