--- a/projects/style.css
+++ b/projects/style.css
@@ -145,6 +145,10 @@ input:focus {
     border-radius: 20px;
 }
 
+.value {
+    color: #00cccc;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
